@@ -19,7 +19,7 @@ import re
 # for inclusion in HTMLStripCharFilter.jflex.
 
 def main():
-  print get_apache_license()
+  print(get_apache_license())
   codes = {}
   regex = re.compile(r'\s*<!ENTITY\s+(\S+)\s+"&(?:#38;)?#(\d+);"')
   for line in get_entity_text().split('\n'):
@@ -38,51 +38,51 @@ def main():
     new_entry = ('"%s"' if first_entry else ' | "%s"') % key
     first_entry = False
     if len(output_line) + len(new_entry) >= 80:
-      print output_line
+      print(output_line)
       output_line = '                   '
     output_line += new_entry
     if key in ('quot','copy','gt','lt','reg','amp'):
       new_entry = ' | "%s"' % key.upper()
       if len(output_line) + len(new_entry) >= 80:
-        print output_line
+        print(output_line)
         output_line = '                   '
       output_line += new_entry
-  print output_line, ')'
+  print(output_line, ')')
 
-  print '%{'
-  print '  private static final Map<String,String> upperCaseVariantsAccepted'
-  print '      = new HashMap<>();'
-  print '  static {'
-  print '    upperCaseVariantsAccepted.put("quot", "QUOT");'
-  print '    upperCaseVariantsAccepted.put("copy", "COPY");'
-  print '    upperCaseVariantsAccepted.put("gt", "GT");'
-  print '    upperCaseVariantsAccepted.put("lt", "LT");'
-  print '    upperCaseVariantsAccepted.put("reg", "REG");'
-  print '    upperCaseVariantsAccepted.put("amp", "AMP");'
-  print '  }'
-  print '  private static final CharArrayMap<Character> entityValues'
-  print '      = new CharArrayMap<>(%i, false);' % len(keys)
-  print '  static {'
-  print '    String[] entities = {'
+  print('%{')
+  print('  private static final Map<String,String> upperCaseVariantsAccepted')
+  print('      = new HashMap<>();')
+  print('  static {')
+  print('    upperCaseVariantsAccepted.put("quot", "QUOT");')
+  print('    upperCaseVariantsAccepted.put("copy", "COPY");')
+  print('    upperCaseVariantsAccepted.put("gt", "GT");')
+  print('    upperCaseVariantsAccepted.put("lt", "LT");')
+  print('    upperCaseVariantsAccepted.put("reg", "REG");')
+  print('    upperCaseVariantsAccepted.put("amp", "AMP");')
+  print('  }')
+  print('  private static final CharArrayMap<Character> entityValues')
+  print('      = new CharArrayMap<>(%i, false);' % len(keys))
+  print('  static {')
+  print('    String[] entities = {')
   output_line = '     '
   for key in keys:
     new_entry = ' "%s", "%s",' % (key, codes[key])
     if len(output_line) + len(new_entry) >= 80:
-      print output_line
+      print(output_line)
       output_line = '     '
     output_line += new_entry
-  print output_line[:-1]
-  print '    };'
-  print '    for (int i = 0 ; i < entities.length ; i += 2) {'
-  print '      Character value = entities[i + 1].charAt(0);'
-  print '      entityValues.put(entities[i], value);'
-  print '      String upperCaseVariant = upperCaseVariantsAccepted.get(entities[i]);'
-  print '      if (upperCaseVariant != null) {'
-  print '        entityValues.put(upperCaseVariant, value);'
-  print '      }'
-  print '    }'
-  print "  }"
-  print "%}"
+  print(output_line[:-1])
+  print('    };')
+  print('    for (int i = 0 ; i < entities.length ; i += 2) {')
+  print('      Character value = entities[i + 1].charAt(0);')
+  print('      entityValues.put(entities[i], value);')
+  print('      String upperCaseVariant = upperCaseVariantsAccepted.get(entities[i]);')
+  print('      if (upperCaseVariant != null) {')
+  print('        entityValues.put(upperCaseVariant, value);')
+  print('      }')
+  print('    }')
+  print("  }")
+  print("%}")
 
 def get_entity_text():
 # The text below is taken verbatim from
